TheKabal (8 June 2014)
--------------------------------------
Setup info has been rewritten to use templates, add additional tests, improve html compliance, etc.

TheKabal (2 June 2014)
--------------------------------------
Continued cleanup based on PSR standards, correct space before functions formatting, indention, php statement on its own line, etc.

TheKabal (25 May 2014)
--------------------------------------
Add namespaces to class files, move class files to correct names, correct space before functions formatting
Fix variable order for Player::Kill
Update composer itself, and Smarty to latest version

TheKabal (16 May 2014)
--------------------------------------
Assorted fixes for variable naming, to be consistently camelCaps styled.

TheKabal (11 May 2014)
--------------------------------------
Change "HandleFuelScoop" to BntMove::calcFuelScooped, in classes directory
Move database configuration include from global includes to inside the database class & init method itself. And then there were three (global_includes left)..
Switch all functions out of Planet report ce, and into BadPlanetReportCE class
Move functions out of log.php, and into BadLog
Move functions out of planet_report.php, and into BadPlanetReport
Move functions out of traderoute.php, and into BadTraderoute
Eliminate footer.php, replace with BadFooter::display class & method
Eliminate header.php, replace with BntHeader::display class & method

TheKabal (7 May 2014)
--------------------------------------
Fix potential vulnerability, discovered thanks to RIPS security scanner

TheKabal (4 May 2014)
--------------------------------------
May the fourth be with you!
Extended the language and gameconfig schemas to allow types to be stored with variables
Expanded BntFile to include a better ini parser, which pulls in the variable types along with the variables
Change the handling of the registry (bntreg) to include variable types from the database

TheKabal (3 May 2014)