@@ -17,10 +17,9 @@
 //
 // File: admin/perf_monitor.php
 
-if (strpos($_SERVER['PHP_SELF'], 'user_editor.php')) // Prevent direct access to this file
+if (strpos($_SERVER['PHP_SELF'], 'perf_monitor.php')) // Prevent direct access to this file
 {
-    $error_file = $_SERVER['SCRIPT_NAME'];
-    include_once './error.php';
+    die('Blacknova Traders error: You cannot access this file directly.');
 }
 
 define('ADODB_PERF_NO_RUN_SQL', 1);
